# wsgi_method_override

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/wsgi_method_override/: wsgi_method_override.py
tests/: test_wsgi_method_override.py
