[project]
name = "wsgi-method-override"
version = "0.2.0"
description = "A tool for turning a web Python application. Provide an HTTP method override."
authors = [
    {name = "Marcus Almeida", email = "mpereirassa@gmail.com"}
]
readme = "README.md"
license = "MIT"
keywords = ["wsgi", "web server", "method override"]
requires-python = ">=3.10.0"

repository = "https://github.com/marcuxyz/wsgi-method-override"
homepage = "https://github.com/marcuxyz/wsgi-method-override/issues"

dependencies = [
    "werkzeug (>=3.1.3,<4.0.0)"
]

[tool.poetry]
packages = [{include = "wsgi_method_override", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
